# PythonSoftwareDesign

./: CODEOWNERS  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml
src/design_patterns/command/: README.md  example_one.py  game_example.py  photoshop_example.py  supplement.py
src/design_patterns/command/tests/: example_one_test.py  game_example_test.py  photoshop_example_test.py
src/design_patterns/specification/: README.md  employee_specification.py  example.py  supplement.py
src/design_patterns/specification/tests/: anti_pattern_test.py  best_practice_test.py  fixtures.py
src/design_principles/solid/liskov/: README.md
src/design_principles/solid/liskov/detailed/: Exceptions.md  ParameterTypes.md  ReturnTypes.md  StrengthenPreconditions.md  WeakenPostconditions.md  exceptions.py  parameter_types.py  return_types.py  strengthen_preconditions.py  weaken_postconditions.py
src/design_principles/solid/liskov/tests/: exceptions_test.py  liskov_test.py  (+4 more)
src/design_principles/solid/open_closed/: README.md  example.py
src/design_principles/solid/single_responsibility/: README.md  example.py
src/design_principles/type_hints/: README.md  anti_patterns.py  example.py
src/design_principles/type_hints/tests/: type_hints_test.py
src/example/: some_code.py
src/solid/liskov/: README.md  example.py
src/solid/liskov/detailed/: ParameterTypes.md  parameter_types.py
src/solid/open_closed/: README.md  example.py
src/solid/single_responsibility/: README.md  TUTORIAL.md  example.py  supplement.py
src/type_hints/: README.md  TUTORIAL.md  anti_patterns.py  examples.py  supplement.py
tests/: example_test.py  liskov_parameter_types_test.py  liskov_test.py  open_closed_test.py  solid_single_responsibility_test.py  type_hints_test.py
tests/design_principles/solid/: liskov_test.py  single_responsibility_test.py
tests/design_principles/solid/liskov_detailed/: return_types_test.py
(+2 files in other folders)
