[tool.poetry]
name = "python-software-design"
version = "0.1.0"
description = "A collection of examples of how to apply various software design patterns in Python."
authors = ["Jamie McKernan"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_software_design"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
