[tool.poetry]
name = "python-software-design"
version = "0.1.0"
description = "A collection of examples of how to apply various software design patterns in Python."
authors = ["Jamie McKernan"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_software_design"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-xdist = "^3.1.0"
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
