[tool.poetry]
name = "python-software-design"
version = "0.1.0"
description = "A collection of examples of how to apply various software design patterns in Python."
authors = ["Jamie McKernan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-xdist = "^3.1.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"
bandit = "^1.7.4"
toml = "^0.10.2"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["\\.pytest_cache", "\\.venv", "\\.git"]

[tool.isort]
profile = "black"
skip_glob = [".mypy_cache/*", ".pytest_cache/*", ".venv/*", ".git/*"]

[tool.bandit]
exclude_dirs = [".mypy_cache/", ".pytest_cache/", ".venv/", ".git/", "tests/"]